# random-dnd

./: .gitignore  CHANGELOG.md  GEMINI.md  README.md
.github/reusable/: cd.yml
.github/workflows/: _backend-setup.yml  _cd.yml  _frontend-setup.yml  backend-cd.yml  backend-ci.yml  backend-setup.yml  cd.yml  frontend-cd.yml  frontend-ci.yml  helm-ci.yml  release-please.yml
.kiro/specs/random-jdr-character-generator/: design.md  requirements.md  tasks.md
back/: .dockerignore  .gitignore  Dockerfile  auth.py  config.py  main.py  model.py  pyproject.toml
back/tests/: test_auth.py  test_first.py
front/: .dockerignore  Dockerfile  README.md  angular.json  jest.config.js  package-lock.json  package.json  setup-jest.ts
front/nginx/: default.conf
front/src/: index.html
front/src/app/: app.component.html  app.component.scss  app.component.ts  app.config.ts  app.routes.ts  models.ts
front/src/app/models/: races.ts
front/src/app/services/: api.service.spec.ts  api.service.ts  auth-oauth.service.ts  (+1 more)
front/src/environments/: environment.development.ts  environment.ts
helm/: Chart.yaml  values-prod.yaml  values-staging.yaml  values.yaml
helm/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  sealed-llm-secret.yaml  sealed-postgres-secret.yaml  service.yaml  serviceaccount.yaml
helm/templates/secrets/: sealed-llm-secret.yaml  sealed-llm-staging-secret.yaml  sealed-postgres-secret.yaml  sealed-postgres-staging-secret.yaml
helm/templates/tests/: test-connection.yaml
src/app/: app.component.spec.ts
(+8 files in other folders)
