[project]
name = "back"
version = "0.1.0"
description = "Random JDR"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "mistralai>=1.8.2",
    "pydantic-settings>=2.5.2",
]

[tool.uv]
dev-dependencies = [
    "mypy>=1.16.0",
    "pytest>=8.4.0",
    "ruff>=0.11.13",
]
