[project]
name = "back"
version = "0.1.0"
description = "Random JDR"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "mistralai>=1.8.2",
    "pydantic-settings>=2.5.2",
    "sqlalchemy>=2.0.31",
    "psycopg2-binary>=2.9.9",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.11.13",
    "pytest>=8.4.0",
    "ty>=0.0.1a10",
]
